fixed some i18n and renamed a props

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -163,9 +163,9 @@
   "add_teams_to_scheme.confirmation.message": "This team is already selected in another team scheme, are you sure you want to move it to this team scheme?",
   "add_teams_to_scheme.confirmation.title": "Team Override Scheme Change?",
   "add_teams_to_scheme.title": "Add Teams To **Team Selection** List",
-  "add_user_to_channel_modal.channels": "Channels",
   "add_user_to_channel_modal.cancel": "Cancel",
   "add_user_to_channel_modal.add": "Add",
+  "add_user_to_channel_modal.membershipExistsError": "{name} is already a member of that channel",
   "add_user_to_channel_modal.help": "Type to find a channel. Use ↑↓ to browse, ↵ to select, ESC to dismiss.",
   "add_user_to_channel_modal.title": "Add {name} to a channel.",
   "add_users_to_team.title": "Add New Members To {teamName} Team",
@@ -2678,8 +2678,8 @@
   "user_profile.account.localTime": "Local Time: ",
   "user_profile.send.dm": "Send Message",
   "user_profile.send.dm.icon": "Send Message Icon",
-  "user_profile.add_user_to_channel.dm": "Add to a Channel",
-  "user_profile.add_user_to_channel.dm.icon": "Add to Channel Icon",
+  "user_profile.add_user_to_channel": "Add to a Channel",
+  "user_profile.add_user_to_channel.icon": "Add to Channel Icon",
   "user_profile.webrtc.call": "Start Video Call",
   "user_profile.webrtc.offline": "The user is offline",
   "user_profile.webrtc.unavailable": "New call unavailable until your existing call ends",
